tests/cases/semantic/invalid/return_outside_function/main.nm
return 1

@entry
fn main() {}
